<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <ImageView
    android:layout_width="40dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:src="@drawable/arror_right"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/nextActivityIcon"
    android:layout_height="40dp" />

  <ImageView
    android:id="@+id/target_image"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/steering_wheel"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias=".1" />

  <Button
    android:id="@+id/rotate_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="rotate"
    android:text="@string/rotate"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/translate_button" />

  <Button
    android:id="@+id/translate_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="translate"
    android:text="@string/translate"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/rotate_button"
    app:layout_constraintRight_toLeftOf="@id/scale_button" />

  <Button
    android:id="@+id/scale_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="scale"
    android:text="@string/scale"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/translate_button"
    app:layout_constraintRight_toLeftOf="@id/fade_button" />

  <Button
    android:id="@+id/fade_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="fade"
    android:text="@string/fade"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/scale_button"
    app:layout_constraintRight_toRightOf="parent" />

  <Button
    android:id="@+id/play_from_xml_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:onClick="playFromXML"
    android:text="@string/play_from_xml"
    app:layout_constraintBottom_toTopOf="@id/rotate_button"
    app:layout_constraintLeft_toLeftOf="parent" />

  <Button
    android:id="@+id/play_from_code_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:onClick="playFromCode"
    android:text="@string/play_from_code"
    app:layout_constraintBottom_toTopOf="@id/fade_button"
    app:layout_constraintRight_toRightOf="parent" />

  <Button
    android:id="@+id/use_vpa_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="viewPropertyAnimator"
    android:text="@string/use_viewpropertyanimator"
    app:layout_constraintBottom_toTopOf="@id/play_from_xml_button"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>